fix: pop up form on mobile devices

--- a/assets/stylesheets/css/reset/mini_reset.css
+++ b/assets/stylesheets/css/reset/mini_reset.css
@@ -46,6 +46,7 @@ h3 {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: auto;
 }
 
 .pop-up-form {
